tests/should-pass/active-fragments/check1.fk
-- #desc   Due to only considering active fragments on APP, shadowed instantiations are not regarded
-- #return unit

--- start of standard stuff ---
data Bool = true | false
interface State X = get: X
                  | put: X -> Unit
--- end of standard stuff ---


foo: {[State Bool, State Int]Unit}
foo! = put 7

processStateInt: {<State Int>Unit -> Unit}
processStateInt <get -> k> = processStateInt (k 3)
processStateInt <put x -> k> = processStateInt (k unit)
processStateInt unit = unit

main: {Unit}
main! = processStateInt foo!
