tests/should-fail/type-error/r.commandRigidVars.fk
-- #desc   Demonstrated a bug which did not keep rigidity of command ty vars
-- #return failed to unify X (line 6 , column 18) with Int (line 9 , column 42)

data Pair X Y = pair X Y

interface Copy = copy X: X -> Pair X X

copier: {<Copy>Unit -> Unit}
copier <copy x -> k> = copier (k (pair x 3))
copier unit = unit

main: {Unit}
main! = unit
